syntax = "proto3";

package gnboot;

option go_package = "github.com/liluoliluoli/gnboot/api";

message Page {
  int32 currentPage = 1;
  int32 pageSize = 2;
  int32 totalPage = 3;
  int32 count = 4;
}

message IdsRequest {
  string ids = 1;
}